=head1 Changes in 2.5.1

=over 2

=item *

Fixed a segfault in B<imap_connection> which could occur when SASL
was used.

=item *

Fixed a segfault in the keyword generation code which was assuming
that an article was nul-terminated.

=item *

Owing to the US-CERT vulnerability note VU#238019, Cyrus SASL library
has slightly changed.  B<imap_connection> and B<nnrpd> now handle
that change.  Otherwise, some answers are too long to be properly
computed during SASL exchanges.

=item *

Fixed a memory allocation problem which caused B<nnrpd> to die when
retrieving via HDR/XHDR/XPAT the contents of an extra overview field
absent from the headers of an article.  The NEWNEWS command was also
affected on very rare cases.  Thanks to Tim Woodall for the bug report.

=item *

HDR/XHDR/XPAT answers are now robust when the overview database is
inconsistent.  When the overview schema was modified without the overview
database being rebuilt, wrong results could be returned for extra fields
(especially a random portion of some other header).  The desired header
name is now explicitly searched for in the overview information.

=item *

Fixed the source which is logged to the F<news> log file for local
postings when the local server is not listed in F<incoming.conf>.
A wrong name was used, taken amongst known peers.  The source is now
logged as C<localhost>.

=item *

Fixed a bug in the timecaf storage method:  only the first 65535 articles
could be retrievable in a CAF, though everything was properly stored.  (A
Crunched Article File contains all the articles that arrive to the news
server during 256 seconds.)

The storage token now uses 4 bytes to store the article sequence number
for timecaf, instead of only 2 bytes.  Thanks to Kamil Jonca for the
bug report and also the patch.

=item *

Fixed a bug in both timecaf and timehash which prevented them from working
on systems where short ints were not 16-bit integers.

=item *
